// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSourcesAddForm /> should render properly after permissions are loaded 1`] = `
.emotion-104 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-12 {
  width: 470px;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-5 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-18 {
  min-width: 470px;
  max-width: 50%;
}

.emotion-17 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-13 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-15 {
  position: relative;
}

.emotion-14 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-14:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-16 {
  padding-top: 8px;
}

.emotion-48 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-19 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-20 {
  clear: both;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-21 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-23 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-22 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-25 {
  padding-left: 24px;
}

.emotion-28 {
  padding-left: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 16px;
  color: #ffffff;
}

.emotion-26 {
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
}

.emotion-27 {
  color: #808080;
  padding-left: 12px;
}

.emotion-50 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-57 {
  background-color: #3b3b3b;
}

.emotion-53 {
  border-bottom: 1px solid #4a4a4a;
  padding: 16px;
}

.emotion-52 {
  font-size: 17px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-51 {
  color: #73b61c;
  margin-right: 16px;
}

.emotion-56 {
  padding: 16px;
  padding-left: 60px;
  padding-bottom: 32px;
}

.emotion-54 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-55 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-55 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-55 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-58 {
  color: #73b61c;
  margin-right: 16px;
}

.emotion-61 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-98 {
  width: 100%;
  color: #ffffff;
  text-align: left;
}

.emotion-98 th,
.emotion-98 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-98 th:first-of-type,
.emotion-98 td:first-of-type {
  padding-left: 16px;
}

.emotion-98 td {
  border-top: 1px solid #4a4a4a;
}

.emotion-98 td:first-of-type {
  border: none;
}

.emotion-98 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-98 tr:hover + tr td {
  border-top-color: transparent;
}

.emotion-98 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-98 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-67 {
  cursor: pointer;
}

.emotion-66 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-103 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-103 button,
.emotion-103 a {
  margin-right: 16px;
}

.emotion-101 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-101:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-101[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-101,
.emotion-101:hover,
.emotion-101:visited {
  background-color: #808080;
}

.emotion-101:hover {
  opacity: 0.5;
}

.emotion-101[aria-disabled=true] {
  background-color: #808080;
}

.emotion-102 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-102:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-102[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-102,
.emotion-102:hover,
.emotion-102:visited {
  background-color: #73b61c;
}

.emotion-102:hover {
  background-color: #96c955;
}

.emotion-102[aria-disabled=true] {
  background-color: #808080;
}

<form
  action=""
  className="emotion-104"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-12"
  >
    <h3
      className="emotion-0"
    >
      Data Source Name
    </h3>
    <div
      className="emotion-5"
    >
      <label
        className="emotion-1"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-2"
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-4"
      >
         
      </div>
    </div>
    <h3
      className="emotion-0"
    >
      Connect to Source: Google Cloud Storage
    </h3>
    <div
      className="emotion-5"
    >
      <label
        className="emotion-1"
        htmlFor="url"
      >
        Bucket Address
      </label>
      <div
        className="emotion-3"
      >
        <input
          className="emotion-2"
          id="url"
          name="url"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-4"
      >
         
      </div>
    </div>
  </div>
  <div
    className="emotion-18"
  >
    <div
      className="emotion-17"
    >
      <label
        className="emotion-13"
        htmlFor="key"
      >
        If this bucket is private, please paste the JSON service account key:
      </label>
      <div
        className="emotion-15"
      >
        <textarea
          className="emotion-14"
          id="key"
          name="key"
          onChange={[Function]}
          rows="5"
          value=""
        />
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
  </div>
  <fieldset
    className="emotion-48"
  >
    <legend
      className="emotion-19"
    >
      Select File Types to Import
    </legend>
    <div
      className="emotion-20"
    />
    <label
      className="emotion-29"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-21"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Image Files"
        />
        <div
          className="emotion-23"
        >
          <svg
            className="emotion-22"
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
      </div>
      <div
        className="emotion-25"
      >
        <img
          alt="Image Files"
          src="/icons/images.png"
          width="40px"
        />
      </div>
      <div
        className="emotion-28"
      >
        <span
          className="emotion-26"
        >
          Image Files
        </span>
        <span
          className="emotion-27"
        >
          GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
        </span>
      </div>
    </label>
    <label
      className="emotion-29"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-21"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Documents (PDF & MS Office)"
        />
        <div
          className="emotion-23"
        >
          <svg
            className="emotion-22"
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
      </div>
      <div
        className="emotion-25"
      >
        <img
          alt="Documents (PDF & MS Office)"
          src="/icons/documents.png"
          width="40px"
        />
      </div>
      <div
        className="emotion-28"
      >
        <span
          className="emotion-26"
        >
          Documents (PDF & MS Office)
        </span>
        <span
          className="emotion-27"
        >
          PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
        </span>
      </div>
    </label>
    <label
      className="emotion-29"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-21"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Video Files"
        />
        <div
          className="emotion-23"
        >
          <svg
            className="emotion-22"
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
      </div>
      <div
        className="emotion-25"
      >
        <img
          alt="Video Files"
          src="/icons/videos.png"
          width="40px"
        />
      </div>
      <div
        className="emotion-28"
      >
        <span
          className="emotion-26"
        >
          Video Files
        </span>
        <span
          className="emotion-27"
        >
          MP4, M4V, MOV, MPG, MEPG, OGG
        </span>
      </div>
    </label>
  </fieldset>
  <h3
    className="emotion-0"
  >
    Select Analysis
  </h3>
  <p
    className="emotion-50"
  >
    Choose the type of analysis you would like performed on your data set:
  </p>
  <div
    className="emotion-57"
  >
    <div
      className="emotion-53"
    >
      <h4
        className="emotion-52"
      >
        <svg
          className="emotion-51"
          data-file-name="checkmark.svg"
          width={28}
        />
        Zorroa Automatic Analysis
      </h4>
    </div>
    <div
      className="emotion-56"
    >
      <p
        className="emotion-54"
      >
        The following basic analysis is applied to all data sets.
      </p>
      <ul
        className="emotion-55"
      >
        <li>
          <svg
            data-file-name="checkmark.svg"
          />
          <div>
            <span>
              File Introspection
            </span>
            <br />
            Extracts native metadata from file.
          </div>
        </li>
        <li>
          <svg
            data-file-name="checkmark.svg"
          />
          <div>
            <span>
              Similarity Hash
            </span>
            <br />
            Adds a hash to all images used to quantify the similarity between images.
          </div>
        </li>
        <li>
          <svg
            data-file-name="checkmark.svg"
          />
          <div>
            <span>
              Proxy Creation
            </span>
            <br />
            Creates proxy files suitable for web streaming for all media.
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div>
     
  </div>
  <div
    className="emotion-57"
  >
    <div
      className="emotion-53"
    >
      <h4
        className="emotion-52"
      >
        <svg
          className="emotion-58"
          data-file-name="checkmark.svg"
          width={28}
        />
        Zorroa
      </h4>
    </div>
    <div
      className="emotion-56"
    >
      <p
        className="emotion-61"
      >
        These analysis modules are included in your base package. You can run as many as you’d like,  but running more than you need will increase processing time.
      </p>
      <table
        cellSpacing="0"
        className="emotion-98"
      >
        <thead>
          <tr>
            <th>
               
            </th>
            <th>
              Name
            </th>
            <th>
              Description
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="label-detection"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Label Detection
                   
                  Adds a list of predicted label that apply to the media.
                </div>
              </label>
            </td>
            <td>
              Label Detection
            </td>
            <td>
              Adds a list of predicted label that apply to the media.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="object-detection"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Object Detection
                   
                  Detects up to 80 everyday objects.
                </div>
              </label>
            </td>
            <td>
              Object Detection
            </td>
            <td>
              Detects up to 80 everyday objects.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="facial-recognition"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Facial Recognition
                   
                  Recognizes faces within an image.
                </div>
              </label>
            </td>
            <td>
              Facial Recognition
            </td>
            <td>
              Recognizes faces within an image.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="ocr"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  OCR (Optical Character Recognition)
                   
                  Transcribes text found in images.
                </div>
              </label>
            </td>
            <td>
              OCR (Optical Character Recognition)
            </td>
            <td>
              Transcribes text found in images.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="shot-detection"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Shot Detection
                   
                  Intelligently breaks a video into separate shots and imports each as its own entity.
                </div>
              </label>
            </td>
            <td>
              Shot Detection
            </td>
            <td>
              Intelligently breaks a video into separate shots and imports each as its own entity.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="page-analysis"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Page Analysis
                   
                  Breaks multipage document into individual pages and imports them as individual entities.
                </div>
              </label>
            </td>
            <td>
              Page Analysis
            </td>
            <td>
              Breaks multipage document into individual pages and imports them as individual entities.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="emotion-103"
  >
    <a
      className="emotion-101"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      aria-disabled={true}
      className="emotion-102"
      onClick={[Function]}
      type="submit"
    >
      Create Data Source
    </button>
  </div>
</form>
`;

exports[`<DataSourcesAddForm /> should render properly after permissions are loaded 2`] = `
.emotion-104 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-12 {
  width: 470px;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-5 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-2:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-18 {
  min-width: 470px;
  max-width: 50%;
}

.emotion-17 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-13 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-15 {
  position: relative;
}

.emotion-14 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-14:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-16 {
  padding-top: 8px;
}

.emotion-48 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-19 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-20 {
  clear: both;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-30 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-23 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-31 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-25 {
  padding-left: 24px;
}

.emotion-28 {
  padding-left: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 16px;
  color: #ffffff;
}

.emotion-26 {
  font-size: 15px;
  line-height: 18px;
  font-weight: 700;
}

.emotion-27 {
  color: #808080;
  padding-left: 12px;
}

.emotion-50 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-57 {
  background-color: #3b3b3b;
}

.emotion-53 {
  border-bottom: 1px solid #4a4a4a;
  padding: 16px;
}

.emotion-52 {
  font-size: 17px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-51 {
  color: #73b61c;
  margin-right: 16px;
}

.emotion-56 {
  padding: 16px;
  padding-left: 60px;
  padding-bottom: 32px;
}

.emotion-54 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-55 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-55 svg {
  color: #73b61c;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-55 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-58 {
  color: #73b61c;
  margin-right: 16px;
}

.emotion-61 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-98 {
  width: 100%;
  color: #ffffff;
  text-align: left;
}

.emotion-98 th,
.emotion-98 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-98 th:first-of-type,
.emotion-98 td:first-of-type {
  padding-left: 16px;
}

.emotion-98 td {
  border-top: 1px solid #4a4a4a;
}

.emotion-98 td:first-of-type {
  border: none;
}

.emotion-98 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-98 tr:hover + tr td {
  border-top-color: transparent;
}

.emotion-98 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-98 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-67 {
  cursor: pointer;
}

.emotion-66 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-103 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-103 button,
.emotion-103 a {
  margin-right: 16px;
}

.emotion-101 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-101:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-101[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-101,
.emotion-101:hover,
.emotion-101:visited {
  background-color: #808080;
}

.emotion-101:hover {
  opacity: 0.5;
}

.emotion-101[aria-disabled=true] {
  background-color: #808080;
}

.emotion-102 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-102:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-102[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-102,
.emotion-102:hover,
.emotion-102:visited {
  background-color: #73b61c;
}

.emotion-102:hover {
  background-color: #96c955;
}

.emotion-102[aria-disabled=true] {
  background-color: #808080;
}

.emotion-21 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-22 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<form
  action=""
  className="emotion-104"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-12"
  >
    <h3
      className="emotion-0"
    >
      Data Source Name
    </h3>
    <div
      className="emotion-5"
    >
      <label
        className="emotion-1"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-2"
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value="My Data Source"
        />
      </div>
      <div
        className="emotion-4"
      >
         
      </div>
    </div>
    <h3
      className="emotion-0"
    >
      Connect to Source: Google Cloud Storage
    </h3>
    <div
      className="emotion-5"
    >
      <label
        className="emotion-1"
        htmlFor="url"
      >
        Bucket Address
      </label>
      <div
        className="emotion-3"
      >
        <input
          className="emotion-2"
          id="url"
          name="url"
          onChange={[Function]}
          type="text"
          value="gs://zorroa-dev-data"
        />
      </div>
      <div
        className="emotion-4"
      >
         
      </div>
    </div>
  </div>
  <div
    className="emotion-18"
  >
    <div
      className="emotion-17"
    >
      <label
        className="emotion-13"
        htmlFor="key"
      >
        If this bucket is private, please paste the JSON service account key:
      </label>
      <div
        className="emotion-15"
      >
        <textarea
          className="emotion-14"
          id="key"
          name="key"
          onChange={[Function]}
          rows="5"
          value="jkdT9Uherdozguie89FHIJS"
        />
      </div>
      <div
        className="emotion-16"
      >
         
      </div>
    </div>
  </div>
  <fieldset
    className="emotion-48"
  >
    <legend
      className="emotion-19"
    >
      Select File Types to Import
    </legend>
    <div
      className="emotion-20"
    />
    <label
      className="emotion-29"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-21"
          defaultChecked={true}
          onClick={[Function]}
          type="checkbox"
          value="Image Files"
        />
        <div
          className="emotion-23"
        >
          <svg
            className="emotion-22"
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
      </div>
      <div
        className="emotion-25"
      >
        <img
          alt="Image Files"
          src="/icons/images.png"
          width="40px"
        />
      </div>
      <div
        className="emotion-28"
      >
        <span
          className="emotion-26"
        >
          Image Files
        </span>
        <span
          className="emotion-27"
        >
          GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
        </span>
      </div>
    </label>
    <label
      className="emotion-29"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-30"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Documents (PDF & MS Office)"
        />
        <div
          className="emotion-23"
        >
          <svg
            className="emotion-31"
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
      </div>
      <div
        className="emotion-25"
      >
        <img
          alt="Documents (PDF & MS Office)"
          src="/icons/documents.png"
          width="40px"
        />
      </div>
      <div
        className="emotion-28"
      >
        <span
          className="emotion-26"
        >
          Documents (PDF & MS Office)
        </span>
        <span
          className="emotion-27"
        >
          PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
        </span>
      </div>
    </label>
    <label
      className="emotion-29"
    >
      <div
        className="emotion-24"
      >
        <input
          className="emotion-30"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Video Files"
        />
        <div
          className="emotion-23"
        >
          <svg
            className="emotion-31"
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
      </div>
      <div
        className="emotion-25"
      >
        <img
          alt="Video Files"
          src="/icons/videos.png"
          width="40px"
        />
      </div>
      <div
        className="emotion-28"
      >
        <span
          className="emotion-26"
        >
          Video Files
        </span>
        <span
          className="emotion-27"
        >
          MP4, M4V, MOV, MPG, MEPG, OGG
        </span>
      </div>
    </label>
  </fieldset>
  <h3
    className="emotion-0"
  >
    Select Analysis
  </h3>
  <p
    className="emotion-50"
  >
    Choose the type of analysis you would like performed on your data set:
  </p>
  <div
    className="emotion-57"
  >
    <div
      className="emotion-53"
    >
      <h4
        className="emotion-52"
      >
        <svg
          className="emotion-51"
          data-file-name="checkmark.svg"
          width={28}
        />
        Zorroa Automatic Analysis
      </h4>
    </div>
    <div
      className="emotion-56"
    >
      <p
        className="emotion-54"
      >
        The following basic analysis is applied to all data sets.
      </p>
      <ul
        className="emotion-55"
      >
        <li>
          <svg
            data-file-name="checkmark.svg"
          />
          <div>
            <span>
              File Introspection
            </span>
            <br />
            Extracts native metadata from file.
          </div>
        </li>
        <li>
          <svg
            data-file-name="checkmark.svg"
          />
          <div>
            <span>
              Similarity Hash
            </span>
            <br />
            Adds a hash to all images used to quantify the similarity between images.
          </div>
        </li>
        <li>
          <svg
            data-file-name="checkmark.svg"
          />
          <div>
            <span>
              Proxy Creation
            </span>
            <br />
            Creates proxy files suitable for web streaming for all media.
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div>
     
  </div>
  <div
    className="emotion-57"
  >
    <div
      className="emotion-53"
    >
      <h4
        className="emotion-52"
      >
        <svg
          className="emotion-58"
          data-file-name="checkmark.svg"
          width={28}
        />
        Zorroa
      </h4>
    </div>
    <div
      className="emotion-56"
    >
      <p
        className="emotion-61"
      >
        These analysis modules are included in your base package. You can run as many as you’d like,  but running more than you need will increase processing time.
      </p>
      <table
        cellSpacing="0"
        className="emotion-98"
      >
        <thead>
          <tr>
            <th>
               
            </th>
            <th>
              Name
            </th>
            <th>
              Description
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-21"
                    defaultChecked={true}
                    onClick={[Function]}
                    type="checkbox"
                    value="label-detection"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-22"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Label Detection
                   
                  Adds a list of predicted label that apply to the media.
                </div>
              </label>
            </td>
            <td>
              Label Detection
            </td>
            <td>
              Adds a list of predicted label that apply to the media.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-30"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="object-detection"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-31"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Object Detection
                   
                  Detects up to 80 everyday objects.
                </div>
              </label>
            </td>
            <td>
              Object Detection
            </td>
            <td>
              Detects up to 80 everyday objects.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-30"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="facial-recognition"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-31"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Facial Recognition
                   
                  Recognizes faces within an image.
                </div>
              </label>
            </td>
            <td>
              Facial Recognition
            </td>
            <td>
              Recognizes faces within an image.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-30"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="ocr"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-31"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  OCR (Optical Character Recognition)
                   
                  Transcribes text found in images.
                </div>
              </label>
            </td>
            <td>
              OCR (Optical Character Recognition)
            </td>
            <td>
              Transcribes text found in images.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-30"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="shot-detection"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-31"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Shot Detection
                   
                  Intelligently breaks a video into separate shots and imports each as its own entity.
                </div>
              </label>
            </td>
            <td>
              Shot Detection
            </td>
            <td>
              Intelligently breaks a video into separate shots and imports each as its own entity.
            </td>
          </tr>
          <tr
            className="emotion-67"
            onClick={[Function]}
          >
            <td>
              <label
                className="emotion-66"
              >
                <div
                  className="emotion-24"
                >
                  <input
                    className="emotion-30"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="page-analysis"
                  />
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-31"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="hidden"
                >
                  Page Analysis
                   
                  Breaks multipage document into individual pages and imports them as individual entities.
                </div>
              </label>
            </td>
            <td>
              Page Analysis
            </td>
            <td>
              Breaks multipage document into individual pages and imports them as individual entities.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="emotion-103"
  >
    <a
      className="emotion-101"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      className="emotion-102"
      onClick={[Function]}
      type="submit"
    >
      Create Data Source
    </button>
  </div>
</form>
`;
